# Micromouse

./: .gitignore  Parede_externa_8.FCStd  README.md  simulate_maze.py  simulate_maze.sh  telemetria.md
docs/nucleos/estrutura/: Estudo_rolamento.md
hw/: telemetria.md
hw/Micromouse/main/: CMakeLists.txt
mec/: Estudo_mudanca_medidas_chassi.md  Estudo_parafuso.md  estudo_roscagem_freecad.md
mec/Assembly/: Chassi_superior3.3.FCStd
mec/gcodes/: LabirintoCNC.nc
pages/: sidebar.md
pages/docs/: eap_geral.md  gerenciamento_riscos.md
src/backend/: .coverage  Dockerfile  docker-compose.yml  entrypoint.sh  requirements.txt
src/firmware/: telemetria.md
src/firmware/Micromouse/main/: CMakeLists.txt  i2c_manager.cpp  i2c_manager.hpp  idf_component.yml  pins.hpp
src/firmware/Micromouse/main/app/: combined_test.cpp  main.cpp  teste_conexao_web.cpp  teste_dfs.cpp  teste_encoder.cpp  teste_gyro.cpp  teste_navegacao.cpp
src/firmware/Micromouse/main/battery/: battery.cpp
src/firmware/Micromouse/main/botoes/: botoes.cpp  botoes.hpp
src/firmware/Micromouse/main/envio_dados/: enviar_mock.ps1  envio_dados.cpp  envio_dados.hpp  gerar_mock.py  mock_envio.json
src/firmware/Micromouse/main/imu/: imu.cpp  imu.h
src/firmware/Micromouse/main/maze/: maze.cpp  maze.hpp
src/firmware/Micromouse/main/telemetria/: telemetria.cpp  telemetria.hpp
src/firmware/Micromouse/main/vl53l0x/: IV_Vl53l0x.cpp  IV_Vl53l0x.hpp
src/firmware/Micromouse/main/wifi/: wifi.cpp  wifi.hpp
src/frontend/: package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vitest.config.ts
(+208 files in other folders)
